--- a/html/templates/product_stock.html
+++ b/html/templates/product_stock.html
@@ -74,13 +74,14 @@
             <a class="btn btn-default" href="{% url 'product_add' %}"><i class="fa fa-fw fa-plus-square"></i> {% trans "Adicionar Produto" %}</a>
           {% endif %}
           {% if user|has_shipment_perm:'add_shipment' %}
-            <a class="btn btn-default" id="btn-add-shipment"><i class="fa fa-amazon"></i> {% trans "Criar Envio para Amazon" %}</a>
+            <a class="btn btn-default" id="btn-add-shipment" data-action-url="{% url 'shipment_add' %}"><i class="fa fa-amazon"></i> {% trans "Criar Envio para Amazon" %}</a>
+            <a class="btn btn-default" id="btn-add-merchant-shipment" data-action-url="{% url 'merchant_shipment_add' %}"><i class="fa fa-envelope-o"></i> {% trans "Criar Envio Merchant" %}</a>
           {% comment %}
             <!-- Novo botao -->
             <a class="btn btn-default" id="btn-add-shipment-brazil"><i class="fa fa-globe"></i> {% trans "Criar Envio para o Brasil" %}</a>
           {% endcomment %}
           <div class="table-responsive">
-            <form action="{% url 'shipment_add' %}" method="post" class="form-add-shipment" id="form-add-shipment">
+            <form action="" method="post" class="form-add-shipment" id="form-add-shipment">
                 {% csrf_token %}
             </form>
             {% endif %}
