--- a/html/templates/product_details.html
+++ b/html/templates/product_details.html
@@ -63,12 +63,15 @@
                     <label class="control-label col-xs-3">{% trans "Data de Cadastro" %}:</label>
                     <div class="col-xs-9">
                         {% if product.create_date %}
-                        {% timezone "Brazil/East" %}
+                         {% if LANGUAGE_CODE == 'pt-br' %}
+                          {% timezone "Brazil/East" %}
                         <p>{{ product.create_date|date:'SHORT_DATETIME_FORMAT' }} - <small>{% trans "Horário de Brasília" %}</small></p>
-                        {% endtimezone %}
-                        {% timezone "US/Eastern" %}
+                          {% endtimezone %}
+                         {% else %}
+                          {% timezone "US/Eastern" %}
                         <p>{{ product.create_date|date:'SHORT_DATETIME_FORMAT' }} - <small>Eastern Time</small></p>
-                        {% endtimezone %}
+                          {% endtimezone %}
+                         {% endif %}
                         {% endif %}
                     </div>
               </div>
