--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -62,7 +62,7 @@
                     {% if LANGUAGE_CODE == 'pt-br' %}
                         <img class="logo-img-plataforma" src="/static/img/logo-maquina-vendas.png" />
                     {% else %}
-                    <img src="/static/img/logo-en.png" style="width: 275px;" />
+                    <img src="/static/img/logo-en.png" />
                     {% endif %}
                 </a>
             </div>
