--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -34,7 +34,7 @@
             {% if LANGUAGE_CODE == 'pt-br' %}
             <img src="/static/img/logo-maquina-vendas.png" width="150px" />
             {% else %}
-            <img src="/static/img/logo-en.png" style="width: 275px;" />
+            <img src="/static/img/logo-en-maior.png" style="width: 170px;" />
             {% endif %}
             <p>{% trans "Digite abaixo seus dados de acesso" %}</p>
             <form action="" method="post" id="form-login">
