--- a/html/templates/email/forgot-password.html
+++ b/html/templates/email/forgot-password.html
@@ -12,7 +12,7 @@
         {% if LANGUAGE_CODE == 'pt-br' %}
         <img src="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/static/img/logo-maquina-vendas.png" width="100px" />
         {% else %}
-        <img src="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/static/img/logo-en.png">
+        <img src="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/static/img/logo-en.png" width="200px">
         {% endif %}
     </a>
     <div style="background: #eee; padding: 10px 20px 20px 20px;">
