--- a/html/templates/merchant_shipment_details.html
+++ b/html/templates/merchant_shipment_details.html
@@ -3,7 +3,7 @@
 
 {% block info_values %}col-md-6{% endblock %}
 
-{% block info_send_date %}col-md-6{% endblock %}
+{% block info_created_date %}col-md-6{% endblock %}
 
 {% block add_info %}
     <div class="col-md-12">
