--- a/html/templates/shipment_details.html
+++ b/html/templates/shipment_details.html
@@ -26,7 +26,7 @@
 
 {% block info_values %}col-md-4{% endblock %}
                 
-{% block info_send_date %}col-md-4{% endblock %}
+{% block info_created_date %}col-md-4{% endblock %}
 
 {% block info_pdf_1 %}
             <div class="col-md-3">
